# spaceship_rental

./: README.md  logging_config.ini  pyproject.toml  requirements.txt
spaceship_rental/: contracts.py  main.py
tests/: test_contracts.py
